kube/pvc.yml

apiVersion: v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
   matchLabels:
    app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15
          volumeMounts:
            - mountPath: /var/lib/postgressql/data
              name: postgres-data
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: db-pvc

1. kubectl get pvc
2. On peux créer créer un pod en exécutant le deployment, insérer une donnée dans la base postgres et puis supprimer le deployment et la recréer par la suite et regrader si la data qu'on a inséré se trouve toujours dans la base postgres.
